# Code-Analyzer

./: .gitignore  CMakeLists.txt
include/: ASTVisitor.h  AnalyzerAction.h  AnalyzerConsumer.h  main.h
samples/: test.c
src/: ASTVisitor.cpp  AnalyzerAction.cpp  AnalyzerConsumer.cpp  main.cpp
